<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:paddingVertical="12dp">

    <Button
        android:id="@+id/btn_min"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:text="@string/text_min"
        android:padding="0dp"
        app:layout_constraintEnd_toStartOf="@+id/tv_counter"
        app:layout_constraintBottom_toTopOf="@+id/btn_add_to_cart"
        style="?attr/materialButtonOutlinedStyle"
        app:strokeColor="@color/orange"
        />

    <TextView
        android:id="@+id/tv_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_qty"
        android:maxLines="1"
        android:ellipsize="end"
        android:textSize="18sp"
        android:paddingHorizontal="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/btn_min"
        app:layout_constraintTop_toTopOf="@+id/btn_min"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/btn_plus"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:text="@string/text_plus"
        android:padding="0dp"
        app:layout_constraintStart_toEndOf="@+id/tv_counter"
        app:layout_constraintBottom_toTopOf="@+id/btn_add_to_cart"
        />

    <Button
        android:id="@+id/btn_add_to_cart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="12dp"
        android:text="@string/text_detail_button" />

</androidx.constraintlayout.widget.ConstraintLayout>