<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/tv_menu_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_detail_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:maxLines="1"
        android:ellipsize="end"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/iv_star"
        />

    <ImageView
        android:id="@+id/iv_star"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_star"
        app:layout_constraintStart_toEndOf="@+id/tv_menu_name"
        app:layout_constraintTop_toTopOf="@+id/tv_menu_name"
        app:layout_constraintBottom_toBottomOf="@+id/tv_menu_name"/>

    <TextView
        android:id="@+id/tv_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_detail_rating"
        android:layout_marginStart="12dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/iv_star"
        app:layout_constraintTop_toTopOf="@+id/tv_menu_name"
        app:layout_constraintBottom_toBottomOf="@+id/tv_menu_name"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_detail_price"
        android:textSize="16sp"
        android:textStyle="bold"
        android:maxLines="1"
        android:ellipsize="end"
        app:layout_constraintTop_toBottomOf="@id/tv_menu_name"
        app:layout_constraintStart_toStartOf="@+id/tv_menu_name"
        app:layout_constraintEnd_toEndOf="@id/tv_rating"/>

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_detail_desc"
        android:textSize="14sp"
        android:maxLines="10"
        android:ellipsize="end"
        android:layout_marginVertical="12dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_price"
        app:layout_constraintStart_toStartOf="@id/tv_price"
        app:layout_constraintEnd_toEndOf="@id/tv_rating"
        />

</androidx.constraintlayout.widget.ConstraintLayout>